# cargo-vuln-policy-validator

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/adapters/: file_repo.rs  mod.rs  stdout_reporter.rs
src/application/: validate.rs
src/domain/: models.rs  service.rs
src/ports/: inbound.rs  outbound.rs
tests/: cli.rs
